--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <meta name="color-scheme" content="dark light">
         <meta name="keywords" content="foo,bar">
         <!-- Viewport -->
-        <meta name="viewport"
-              content="width=480, shrink-to-fit=yes, viewport-fit=contain, user-scalable=yes">
+        <!-- <meta name="viewport"
+              content="width=480, shrink-to-fit=yes, viewport-fit=contain, user-scalable=yes"> -->
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1> -->
         <!-- iPhone Safari Notch Background Color -->
         <meta name="theme-color" content="#001417">
@@ -228,7 +228,7 @@
                         <div id="availability_button"
                              class="relative flex align-items-center animate-fade-in-cta-1">
                             <div class="tooltip_wrapper">
-                                <a href="https://calendly.com/stepanjakl"
+                                <a href="https://cal.com/stepanjakl"
                                    target="_blank"
                                    rel="noreferrer"
                                    aria-label="Open to new opportunities, book a virtual meeting"
@@ -378,7 +378,7 @@
                                    class="fixed inset-0 cursor-default pointer-events-none"></a>
                                 <dialog id="menu_dropdown" class="z-1 absolute px-1/2 pt-1/2">
                                     <div>
-                                        <a href="https://calendly.com/stepanjakl"
+                                        <a href="https://cal.com/stepanjakl"
                                            target="_blank"
                                            aria-label="Schedule a call via Calendly"
                                            rel="noreferrer">
