--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Viewport -->
         <!-- <meta name="viewport"
               content="width=480, shrink-to-fit=yes, viewport-fit=contain, user-scalable=yes"> -->
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1>
         <!-- iPhone Safari Notch Background Color -->
         <meta name="theme-color" content="#001417">
         <meta name="apple-mobile-web-app-status-bar-style"
