--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         background-position: 0 0;
                         background-image: var(--background-pattern)">
             </div>
-            <div class="relative pt-1/2 w-full max-w-xl"
+            <div class="relative z-2 pt-1/2 w-full max-w-xl"
                  style="padding-bottom: var(--segment-half)">
                 <header id="intro">
                     <div id="intro_left-column"
@@ -446,7 +446,7 @@
                                         </div>
                                     </button>
                                     <a href="#" id="underlay_menu" class="fixed inset-0 cursor-default"></a>
-                                    <dialog id="menu_dropdown" class="z-1 absolute px-1/2 pt-1/2">
+                                    <dialog id="menu_dropdown" class="z-1 absolute pt-1/2">
                                         <div>
                                             <a href="https://cal.com/stepanjakl"
                                                target="_blank"
@@ -649,7 +649,18 @@
                                                 Excited to explore cutting-edge frameworks and tools while prioritizing foundational web development elements like good semantics, cross-compatibility, and accessibility.
                                             </p>
                                             <p>
-                                                In recent years, my efforts have been devoted to building and overseeing a significant number of websites using the&nbsp;<a href="https://apostrophecms.com/" target="_blank"><u>ApostropheCMS</u></a>&nbsp;framework.
+                                                In recent years, my efforts have been devoted to building and overseeing a significant number of websites using the&nbsp;<a href="https://apostrophecms.com/" target="_blank"><u>ApostropheCMS</u><svg class="box-content"
+                                                    style="padding-left: 0.1em;
+                                                    margin-top: -0.65em;
+                                                    width: 0.85rem;
+                                                    height: 0.85rem;"
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    height="20"
+                                                    width="20"
+                                                    viewBox="0 0 20 20"
+                                                    fill="currentColor">
+                                                   <path d="M2.333 17.667V2.333h8.063v2.042H4.375v11.25h11.25v-6.02h2.042v8.062H2.333ZM8 13.437 6.563 12l7.625-7.625h-1.792V2.333h5.27v5.271h-2.041V5.812L8 13.437Z">
+                                               </svg></a>&nbsp;framework.
                                             </p>
                                             <p style="padding-bottom: var(--segment-third)">
                                                 I have been equally dedicated to code and design as a profesional since 2014.
@@ -1112,7 +1123,7 @@
                          class="z-0 fixed inset-0 animate-flicker-triangle-light invisible overflow-hidden pointer-events-none select-none">
                     </div>
                 </div>
-                <footer class="select-none">
+                <footer class="z-1 select-none">
                     <div class="flex px-1/2 pb-1/2 w-full">
                         <div class="flex" style="column-gap: 0.5rem">
                             <span id="square-1"></span>
