update various UI/UX

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                 <a href="#profile"
                                    aria-label="Learn more about me"
                                    rel="noreferrer"
-                                   class="flex align-items-center tooltip_wrapper">
+                                   class="z-4 flex align-items-center tooltip_wrapper">
                                     <span id="menu_link_icon"
                                           class="inline-flex rounded-full"
                                           style="padding: 0.59375rem;
@@ -388,7 +388,7 @@
                                    rel="noreferrer"
                                    style="cursor: progress"
                                    onclick="document.activeElement.blur(); return false"
-                                   class="flex align-items-center tooltip_wrapper"
+                                   class="z-3 flex align-items-center tooltip_wrapper"
                                    disabled>
                                     <span id="menu_link_icon"
                                           class="inline-flex rounded-full"
@@ -430,7 +430,7 @@
                                        id="menu_button-close"
                                        tabindex="0"
                                        onclick="document.querySelector('#menu_dropdown').close(); document.querySelector('#menu_button-open').focus()"
-                                       class="z-2 inset-0"
+                                       class="inset-0"
                                        style="position: absolute"
                                        aria-label="Close dropdown menu"></a>
                                     <button id="menu_button"
@@ -446,7 +446,7 @@
                                         </div>
                                     </button>
                                     <a href="#" id="underlay_menu" class="fixed inset-0 cursor-default"></a>
-                                    <dialog id="menu_dropdown" class="z-1 absolute pt-1/2">
+                                    <dialog id="menu_dropdown" class="z-10 absolute pt-1/2">
                                         <div>
                                             <a href="https://cal.com/stepanjakl"
                                                target="_blank"
